# LLaMA-Factory

./: .gitignore  Pipfile  pyproject.toml
config/: OLMo-1B_Full_Training-Arguments.yaml  OLMo-1B_LoRA_Training-Arguments.yaml  Phi-1.5-1.3B_LoRA_Training-Arguments.yaml  bloom_run_arguments.yaml  bloom_training_config.yaml  llama3_config.yaml  llama3_training_config.yaml  training_args.yaml  unholy_config.yaml  user_config.yaml
src/: debug.py
src/llamafactory/: cli.py
src/llamafactory/train/sft/: workflow.py
src/llamafactory/webui/: runner.py
